# sample-aws-tailored-cost-events-teams

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SCANNER_FINDINGS_JUSTIFICATIONS.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml
lambda/cost_router/: card_builder.py  handler.py  links.py  normalizers.py  routing.py  sinks.py
simulator/: teams_receiver.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
tests/: conftest.py  send_test_event.sh
tests/e2e/: test_e2e_offline.py
tests/fixtures/: README.md  budgets_sns_plaintext.json  cost_anomaly_sns.json  cost_optimization_hub_recommendation.json  trusted_advisor_eventbridge.json
tests/synthetic_events/: budget_threshold.json  cost_anomaly.json  cost_optimization_hub.json  trusted_advisor.json
tests/unit/: test_card_builder.py  test_handler.py  test_links.py  test_normalizers.py  test_routing.py  test_sinks.py  test_talos_handler.py  test_talos_links_ssm.py  test_talos_routing_ttl.py  test_talos_sinks_ssrf.py
