[project]
name = "cost-events-to-teams"
version = "0.1.0"
description = "AWS cost-event router to Microsoft Teams Workflows — test harness (Phase 1)."
requires-python = ">=3.11"
# Runtime deps the Lambda relies on. The Lambda uses only stdlib (urllib, json)
# plus boto3/botocore (provided by the Lambda runtime). Tests need them locally.
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
]

# PEP 735 dependency group. `uv run` installs the default `dev` group
# automatically, so `uv run pytest` has everything it needs offline.
[dependency-groups]
dev = [
    "pytest>=8.0",
    # moto[all] gives us offline mocks for S3, DynamoDB, SSM, Organizations, KMS, SQS.
    "moto[all]>=5.0",
    "boto3>=1.34",
    "botocore>=1.34",
]

# This repo is a Terraform + Lambda project, not an installable Python package.
# Tell uv not to try to build/install the workspace itself — just provision deps.
[tool.uv]
package = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# The Lambda package uses FLAT intra-package imports (e.g. `from card_builder
# import build_card`). Mirror the Lambda runtime by putting the package dir on
# the path so `import normalizers`, `import handler`, etc. resolve in tests.
pythonpath = ["lambda/cost_router"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "aws1: AWS-1 — Budgets plain-text SNS ingestion (dead path; Phase 2 target)",
    "aws2: AWS-2 — Cost Optimization Hub scheduled pull / real field names",
    "aws3: AWS-3 — Trusted Advisor region path + rule filter",
    "aws4: AWS-4 — Cost Anomaly ISO-8601 date -> CE YYYY-MM-DD",
    "aws5: AWS-5 — Cost Explorer deep-link format unverified (xfail)",
    "teams1: TEAMS-1 — no unsupported Action.OpenUrl style:positive",
    "teams2: TEAMS-2 — attachment includes contentUrl:null",
    "code1: CODE-1 — per-record errors must propagate (DLQ/retry)",
]
